working on esg strategy page

--- a/evolution.html
+++ b/evolution.html
@@ -271,27 +271,186 @@
                     </a>
                 </li>
             </ul>
-            <div class="about_bottom_section">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h6 class="fw-bold mb-4">
-                            Hisotry of Evolution
-                        </h6>
-                        <div class="description">
-                            Throughout its auspicious history of more than 65 years, Alfardan Group has successfully evolved from a pearl trading enterprise in the Arabian Gulf, into one of the leading regional conglomerates operating in a wide range of industries and sectors.
+        </div>
+    </div>
+    <!--~~./ end About us ~~-->
+
+    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Start Evolution
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+    <div class="evolution pt-0 mt-0">
+        <div class="container">
+            <div class="section-title">
+                <div class="title">
+                    The Evolution of <b>Alfardan</b>
+                </div>
+                <div class="description">
+                    Throughout its auspicious history of more than 65 years, Alfardan Group has successfully evolved from a pearl trading enterprise in the Arabian Gulf, into one of the leading regional conglomerates operating in a wide range of industries and sectors.
+                </div>
+            </div>
+
+            <div class="evolutionSlider swiper">
+                <div class="nav_btn button-prev">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.4487 44.8281C21.4722 45.8044 19.8895 45.8044 18.913 44.8281L2.30189 28.217C-0.626211 25.2888 -0.627111 20.5418 2.29989 17.6125L18.7257 1.17402C19.702 0.197526 21.285 0.197526 22.2612 1.17402C23.2375 2.15027 23.2375 3.73327 22.2612 4.70952L5.83109 21.1395C4.85479 22.116 4.85479 23.6988 5.83109 24.675L22.4487 41.2926C23.425 42.2689 23.425 43.8518 22.4487 44.8281Z" fill="#C7C9C7"/>
+                    </svg>
+                </div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1954</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Jewellery
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="image-content text-end">
-
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1971</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> EXCHANGE
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1982</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Construction Development Company
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1990</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Group
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1992</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Jewellery <br> <small>Saudi Arabia</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1993</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Properties
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1996</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Investment
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1996</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Automobiles
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1997</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Premier Motors
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1997</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Prestige Cars
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>1999</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Sports Cars
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>2003</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Rolls-Royce Motor Cars Doha
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>2003</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Arabian Agencies Co. (ARACO)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>2004</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Al Arabia Heavy Equipment
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>2005</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Marine Services
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="evolution-item text-center">
+                            <div class="dot"></div>
+                            <p>2006</p>
+                            <div class="content">
+                                <strong>Alfardan</strong> <br> Motorcycles
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="nav_btn button-next">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.55127 44.8281C2.52777 45.8044 4.11052 45.8044 5.08702 44.8281L21.6981 28.217C24.6262 25.2888 24.6271 20.5418 21.7001 17.6125L5.27427 1.17401C4.29802 0.197512 2.71502 0.197512 1.73877 1.17401C0.762522 2.15026 0.762522 3.73326 1.73877 4.70951L18.1689 21.1395C19.1452 22.116 19.1452 23.6988 18.1689 24.675L1.55127 41.2926C0.575016 42.2689 0.575016 43.8518 1.55127 44.8281Z" fill="#d9d9d9"/>
+                    </svg>
+                </div>
             </div>
         </div>
+        <div class="overlay_img" style="background-image: url(assets/img/bg1.png);"></div>
     </div>
-
-    <!--~~./ end About us ~~-->
+    <!--~~./ end Evolution ~~-->
 
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -433,25 +592,5 @@
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/glightbox.min.js"></script>
     <script src="assets/js/script.js"></script>
-
-    <script>
-
-document.querySelectorAll('button[data-bs-toggle="tab"]').forEach((t,i)=>{
-    t.addEventListener('show.bs.tab', function (e) {
-        let targetClass = t.dataset.bsTarget
-        var pane = document.querySelector('#secondTab '+targetClass)
-        var sibling = document.querySelector('#secondTab .tab-pane.active')
-        // hide 2nd pane sibling
-        sibling.classList.remove('show')
-        sibling.classList.remove('active')
-        // show 2nd pane
-        pane.classList.add('show')
-        pane.classList.add('active')
-    })  
-})
-
-
-    </script>
-
 </body>
 </html>
