--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
                 </div>
             </div>
         </div>
+        <div class="overlay_img" style="background-image: url(assets/img/bg1.png);"></div>
     </div>
     <!--~~./ end Evolution ~~-->
 
