working on our journey slider

--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@
                     <div class="row justify-content-center gy-4">
                         <div class="col-8 col-md-5 col-lg-6 order-lg-last">
                             <div class="image-content text-center text-lg-end">
-                                <img src="assets/img/ceo.jpg" alt="Alfardan CEO">
+                                <img src="assets/img/ceo.png" alt="Alfardan CEO">
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -463,6 +463,184 @@
                                     <h6 class="name">Omar Hussain Alfardan</h6>
                                     <p class="designation">
                                         President and CEO of Alfardan Group, Alfardan Hotels and Resorts, Alfardan Hospitality, Alfardan Properties in Qatar and Oman, and Alfardan Group - Automotive Operations in Qatar and Oman
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade pt-5 mt-5 familyMember" id="familyMembers" role="tabpanel">
+                    <h6 class="fw-bold mb-5">
+                        Second Generation Family Members
+                    </h6>
+
+                    <div class="row">
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">Alfardan Group</h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Aisha Hussain Alfardan "
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">Aisha Hussain Alfardan </h6>
+                                    <p class="designation">
+                                        Personal Advisor to the Chairman
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">Alfardan Jewellery - Dubai</h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Ghada Hussain Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Ghada Hussain Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        VP and CEO
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <br>
+                        <hr>
+                        <hr>
+                        <br>
+                    </div>
+                    <h6 class="fw-bold mb-5">
+                        Third Generation Family Members
+                    </h6>
+
+                    <div class="row">
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">Alfardan Jewellery</h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Noor Ali Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Noor Ali Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        Vice President
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">Wahat Al Shafalahia/ Safwa</h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Fardan Fahad Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Fardan Fahad Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        General Manager
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">
+                                    Alfardan Jewellery
+                                </h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Jawahir Ali Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Jawahir Ali Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        Head of Business Development
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">
+                                    Alfardan Group
+                                </h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Sara Fahad Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Sara Fahad Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        Head Of Communications and PR
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">
+                                    Alfardan Automobiles
+                                </h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Hussain Omar Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Hussain Omar Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        General Manager - Business & Network Development
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <div class="item">
+                                <h6 class="item-title mb-5">
+                                    Alfardan Hospitality
+                                </h6>
+                                <div class="thumbnail">
+                                    <img 
+                                        src="assets/img/board-dir/paceholder.png" 
+                                        alt="Zohour Alfardan"
+                                    >
+                                </div>
+                                <div class="desc">
+                                    <h6 class="name">
+                                        Zohour Alfardan
+                                    </h6>
+                                    <p class="designation">
+                                        Head of Development and Lifestyle
                                     </p>
                                 </div>
                             </div>
