--- a/leadershipteam.html
+++ b/leadershipteam.html
@@ -252,7 +252,7 @@
             </ul>
             <div class="about_bottom_section leadershipteam py-5">
                 <div class="row justify-content-center">
-                    <div class="col-8 col-sm-6 col-lg-4">
+                    <div class="col-8 col-sm-6 col-lg-4 col-xl-3">
                         <div class="leadership_item">
                             <div class="thumbnail">
                                 <img src="assets/img/board-dir/ceo.png" alt="Omar Hussain Alfardan" />
