--- a/esg-stragety.html
+++ b/esg-stragety.html
@@ -279,10 +279,17 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-md-8 col-lg-6">
-                    <div class="section-title">
-                        <div class="title">Our Approach</div>
+                    <div class="text-content">
+                        <div class="section-title">
+                            <div class="title">Our Approach</div>
+                        </div>
+                        <p>
+                            Sustainability is becoming an integral element of Alfardan Group's business strategies and processes. This strategic integration paves the way for us to meet our promise to be an enabler of sustainability in a wide range of markets in Qatar and the region.
+                        </p>
+                        <p>
+                            Sustainability is becoming an integral element of Alfardan Group's business strategies and processes. This strategic integration paves the way for us to meet our promise to be an enabler of sustainability in a wide range of markets in Qatar and the region.
+                        </p>
                     </div>
-                    <p> Sustainability is becoming an integral element of Alfardan Group's business strategies and processes. This strategic integration paves the way for us to meet our promise to be an enabler of sustainability in a wide range of markets in Qatar and the region. </p>
                 </div>
                 <div class="col-md-4 col-lg-3 offset-lg-2">
                     <div class="image-content text-center text-lg-end">
@@ -297,6 +304,141 @@
         <div class="container">
             <div class="section-title">
                 <div class="title">Our Journey</div>
+            </div>
+
+            <div class="ourJourneySlider swiper">
+                <div class="nav_btn button-prev">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M22.4487 44.8281C21.4722 45.8044 19.8895 45.8044 18.913 44.8281L2.30189 28.217C-0.626211 25.2888 -0.627111 20.5418 2.29989 17.6125L18.7257 1.17402C19.702 0.197526 21.285 0.197526 22.2612 1.17402C23.2375 2.15027 23.2375 3.73327 22.2612 4.70952L5.83109 21.1395C4.85479 22.116 4.85479 23.6988 5.83109 24.675L22.4487 41.2926C23.425 42.2689 23.425 43.8518 22.4487 44.8281Z" fill="#C7C9C7"/>
+                    </svg>
+                </div>
+                <div class="swiper-wrapper">
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Journey Slide Item -->
+                    <div class="swiper-slide">
+                        <div class="journey_item">
+                            <div class="description">
+                                Signed with the UN Global Impact.
+                            </div>
+                            <div class="dot"></div>
+                            <div class="content">
+                                <div class="month">May</div>
+                                <div class="year">2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                
+
+                </div>
+                <div class="nav_btn button-next">
+                    <svg width="24" height="46" viewBox="0 0 24 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.55127 44.8281C2.52777 45.8044 4.11052 45.8044 5.08702 44.8281L21.6981 28.217C24.6262 25.2888 24.6271 20.5418 21.7001 17.6125L5.27427 1.17401C4.29802 0.197512 2.71502 0.197512 1.73877 1.17401C0.762522 2.15026 0.762522 3.73326 1.73877 4.70951L18.1689 21.1395C19.1452 22.116 19.1452 23.6988 18.1689 24.675L1.55127 41.2926C0.575016 42.2689 0.575016 43.8518 1.55127 44.8281Z" fill="#d9d9d9"/>
+                    </svg>
+                </div>
             </div>
         </div>
     </div>
