some issue fixed

--- a/contact.html
+++ b/contact.html
@@ -301,10 +301,13 @@
                             </ul>
     
                             <div class="mapbox">
-                                <img 
-                                    src="assets/img/contact/alfardanTower.png" 
-                                    alt=""
-                                >
+                                <!-- Map Url -->
+                                <a href="#">
+                                    <img 
+                                        src="assets/img/contact/alfardanTower.png" 
+                                        alt=""
+                                    >
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -349,10 +352,13 @@
                             </ul>
     
                             <div class="mapbox">
-                                <img 
-                                    src="assets/img/contact/alfardancenter.png" 
-                                    alt=""
-                                >
+                                <!-- Map Url -->
+                                <a href="#">
+                                    <img 
+                                        src="assets/img/contact/alfardancenter.png" 
+                                        alt=""
+                                    >
+                                </a>
                             </div>
                         </div>
                     </div>
