--- a/leadershipteam.html
+++ b/leadershipteam.html
@@ -250,7 +250,7 @@
                     <a href="esg-stragety.html" class="nav-link"> ESG STRATEGY & CSR </a>
                 </li>
             </ul>
-            <div class="about_bottom_section leadershipteam py-5">
+            <div class="about_bottom_section leadershipteam">
                 <div class="row justify-content-center">
                     <div class="col-8 col-sm-6 col-lg-4 col-xl-3">
                         <div class="leadership_item">
