--- a/news.html
+++ b/news.html
@@ -248,6 +248,14 @@
             <div>
                 <br><br>
             </div>
+            <div class="search_form">
+                <form action="#">
+                    <div class="input-group">
+                        <input type="search" class="form-control" name="s" placeholder="Search by keyword, date, or title">
+                        <button type="submit">Search</button>
+                    </div>
+                </form>
+            </div>
             <div class="news-wrapper">
                 <div class="row">
                     <div class="col-md-6">
